--- a/client/miniprogram/pages/room/room.wxss
+++ b/client/miniprogram/pages/room/room.wxss
@@ -1,31 +1,31 @@
 .view-barrage {
   box-sizing: border-box;
   width:100%;
-  height: calc(100vh - 110rpx);
+  height: calc(100vh - 130rpx);
   font-size: 30rpx;
-  padding: 0rpx 30rpx;
   display: flex;
   flex-direction: column;
 }
 .view-barrage .item {
-  padding: 10rpx 0rpx;
+  padding: 10rpx 30rpx;
   width: 100%;
 }
 .view-barrage .item image {
-  width: 40rpx;
-  height: 40rpx;
+  width: 45rpx;
+  height: 45rpx;
   margin-right: 16rpx;
   /* margin-top: 4rpx; */
   float: left;
+  border-radius: 50%;
 }
 .view-barrage .item .nickname {
   color: #999;
   float: left;
-  line-height: 40rpx;
+  line-height: 50rpx;
 }
 .view-barrage .item .text {
   width: 100%;
-  line-height: 40rpx;
+  line-height: 50rpx;
 }
 
 
@@ -47,6 +47,7 @@
   width: 75rpx;
   margin-right: 30rpx;
   margin-left: 30rpx;
+  border-radius: 50%;
 }
 .input-area input {
   flex: 1;
